--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.26.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.4.2"
   }
