--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "sass": "^1.86.0",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.36.0",
@@ -24,14 +25,24 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^7.0.0",
+    "@mui/material": "^7.0.0",
+    "@mui/x-data-grid": "^7.28.3",
+    "@mui/x-data-grid-generator": "^7.28.3",
+    "@mui/x-data-grid-pro": "^7.28.3",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.7",
     "moment": "^2.30.1",
+    "primereact": "^10.9.4",
     "prop-types": "^15.8.1",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quilljs": "^2.0.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.2",
     "redux": "^4.0.5",
