--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^9.5.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -36,13 +37,14 @@
     "@mui/x-data-grid-pro": "^7.28.3",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.7",
+    "ckeditor5": "^45.0.0",
     "moment": "^2.30.1",
     "primereact": "^10.9.4",
     "prop-types": "^15.8.1",
-    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-quilljs": "^2.0.5",
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.2",
     "redux": "^4.0.5",
