--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-icons": "^5.5.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1"
   }
 }
