--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.7",
     "ckeditor5": "^45.0.0",
+    "flowbite-react": "^0.11.7",
     "moment": "^2.30.1",
+    "next": "^15.3.2",
     "primereact": "^10.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
